--- a/_2016_pages/faqs.html
+++ b/_2016_pages/faqs.html
@@ -14,10 +14,10 @@ title: Frequently Asked Questions (FAQ)
       <p>Below is a list of Frequently Asked Questions (FAQ).<p>
         <ol>
           <li><b>Question 1</b>
-              <br>Answer tp Question 1<br><br>
+              <br>Answer to Question 1<br><br>
           </li>
           <li><b>Question 2</b>
-              <br>Answer tp Question 2<br><br>
+              <br>Answer to Question 2<br><br>
           </li>
         </ol>
 
