--- a/_2016_pages/about.html
+++ b/_2016_pages/about.html
@@ -14,23 +14,10 @@ title: About the Conference
       <div class="icon-about">
         <img src="../css/2016_style/img/TBD.jpg" alt="icon-about">
       </div>
-
-      <h2 class="first">Theme</h2>
-
-      <p>
-        Your Theme
-      </p>
-
-      <h2 class="second">Vision</h2>
-
-      <p>
-        Your Vision
-      </p>
-      
       <h2 class="third">Mission</h2>
 
       <p>
-        Your Mission
+        Mission
       </p>
            
 
