--- a/_2017_pages/about.html
+++ b/_2017_pages/about.html
@@ -15,21 +15,17 @@ title: About the Conference
         <img src="../css/2017_style/img/TBD.jpeg" alt="icon-about">
       </div>
 
-      <h2 class="second">Theme</h2>
-
-      <p>Your Theme</p>
-
       <h2 class="third">Mission</h2>
 
-      <p>Your Mission</p>
+      <p>Mission</p>
 
       <h2 class="second">Vision</h2>
 
-      <p>Your Vision</p>
+      <p>Vision</p>
       
       <h2 class="first">Objectives</h2>
 
-      <p>Your Objective</p>
+      <p>Objectives</p>
     </section>
 
     <section id="fourth" class="black-frame about about-container">
